[gd_scene load_steps=25 format=3 uid="uid://br5n7wta0qibi"]

[ext_resource type="Script" uid="uid://b8ojg2bnnjekq" path="res://scripts/bot.gd" id="1_pdtv8"]
[ext_resource type="Texture2D" uid="uid://1beh5kkyjbf" path="res://assets/sprites/bot/Death.png" id="2_40x1y"]
[ext_resource type="Texture2D" uid="uid://bxarsrjsm6gbf" path="res://assets/sprites/bot/Hurt.png" id="3_lrr4s"]
[ext_resource type="Texture2D" uid="uid://cpsffy42t6biq" path="res://assets/sprites/bot/Idle.png" id="4_d5c3w"]
[ext_resource type="Texture2D" uid="uid://c1f1sktf3uwfp" path="res://assets/sprites/bot/Walk.png" id="5_6kyqv"]
[ext_resource type="PackedScene" uid="uid://3ovptrr18u0v" path="res://scenes/camera.tscn" id="6_lo4yp"]
[ext_resource type="AudioStream" uid="uid://fahnns0gg3rm" path="res://assets/sounds/blip.wav" id="7_m24fc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a4g1w"]
atlas = ExtResource("2_40x1y")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1817"]
atlas = ExtResource("2_40x1y")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3s75"]
atlas = ExtResource("2_40x1y")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pqco"]
atlas = ExtResource("2_40x1y")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8e2gn"]
atlas = ExtResource("3_lrr4s")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlija"]
atlas = ExtResource("3_lrr4s")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dojgh"]
atlas = ExtResource("4_d5c3w")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_enfqf"]
atlas = ExtResource("4_d5c3w")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yho42"]
atlas = ExtResource("4_d5c3w")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwdg8"]
atlas = ExtResource("4_d5c3w")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygxe5"]
atlas = ExtResource("5_6kyqv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckumb"]
atlas = ExtResource("5_6kyqv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpbci"]
atlas = ExtResource("5_6kyqv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhdxb"]
atlas = ExtResource("5_6kyqv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4g1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1817")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3s75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pqco")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8e2gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlija")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dojgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_enfqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yho42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwdg8")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygxe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckumb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpbci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhdxb")
}],
"loop": true,
"name": &"move",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fjrip"]
size = Vector2(20, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8kwi3"]
size = Vector2(16.25, 1.5)

[node name="Bot01" type="CharacterBody2D" groups=["bot"]]
script = ExtResource("1_pdtv8")

[node name="BotSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"move"
offset = Vector2(9, 0)

[node name="BotCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fjrip")

[node name="Area2D" type="Area2D" parent="BotCollision"]

[node name="BotAccess" type="CollisionShape2D" parent="BotCollision/Area2D"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_8kwi3")
debug_color = Color(0.654902, 0.152941, 0.184314, 0.419608)

[node name="Label" type="Label" parent="."]
offset_left = -4.0
offset_top = -50.0
offset_right = 6.0
offset_bottom = -27.0
text = "E"

[node name="Camera2D" parent="." instance=ExtResource("6_lo4yp")]
enabled = false

[node name="Sounds" type="Node2D" parent="."]

[node name="up" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_m24fc")
pitch_scale = 0.15

[node name="moving" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("7_m24fc")
pitch_scale = 0.2

[connection signal="body_entered" from="BotCollision/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="BotCollision/Area2D" to="." method="_on_area_2d_body_exited"]
